test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/set-paramref-namespace/02-crd.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- crd.yaml
assert:
- crd-assert.yaml
