test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/set-paramref-namespace/03-replicaLimit.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- replicaLimit.yaml
assert:
- replicaLimit.yaml
