test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/set-paramref-namespace/deployment-pass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pass
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container2
        image: nginx
