test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/set-paramref-namespace/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: replicalimits.rules.example.com
status:
  acceptedNames:
    kind: ReplicaLimit
    plural: replicalimits
  storedVersions:
  - v1
