test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/set-paramref-namespace/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-deployment-replicas
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
